--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-﻿streamlit==1.49.1
+streamlit==1.49.1
 pandas==2.3.2
 numpy==2.0.2
 pdfplumber==0.11.7
+docx2txt==0.9
 opencv-python
 scikit-learn
 tensorflow
+cvzone
+pyttsx3
 sentence-transformers
 transformers
-
