--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 streamlit==1.49.1
 pandas==2.3.2
-numpy==2.0.2
 pdfplumber==0.11.7
+python-docx==1.2.0
 docx2txt==0.9
-opencv-python
-scikit-learn
-cvzone
-pyttsx3
-sentence-transformers==5.1.0
+sentence-transformers==2.2.2
+scikit-learn==1.6.1
+numpy==1.25.2
+scipy==1.13.1
+torch==2.1.0
 transformers==4.56.2
-torch==2.8.0
