--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-streamlit==1.49.1
-pandas==2.3.2
-pdfplumber==0.11.7
-python-docx==1.2.0
-docx2txt==0.9
-sentence-transformers==2.2.2
-scikit-learn==1.6.1
-numpy==1.25.2
-scipy==1.13.1
-torch==2.1.0
-transformers==4.33.2
+streamlit
+pandas
+pdfplumber
+docx2txt
+sentence-transformers
+sqlalchemy
+scikit-learn
