--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-numpy
-scikit-learn
-pdfplumber
-python-docx
-docx2txt
+streamlit==1.49.1
+pandas==2.3.2
+numpy==1.25.2
+scikit-learn==1.6.1
+pdfplumber==0.11.7
+python-docx==1.2.0
+docx2txt==0.9
