--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit==1.49.1
-pandas==2.3.2
-numpy==1.25.2
-scikit-learn==1.6.1
-pdfplumber==0.11.7
-python-docx==1.2.0
-docx2txt==0.9
+streamlit>=1.28.0
+pandas>=1.5.3
+pdfplumber>=0.9.0
+docx2txt>=0.8
+sentence-transformers>=2.2.2
+scikit-learn>=1.3.0
+sqlalchemy>=2.0.0
+torch>=2.0.0
+transformers>=4.30.0
